Cambio de parrafo

--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,7 @@
         <div id="Box">
             <div class="cabecera">      
                 <p>blog</p>
-                <p>Lugar de gente que se baña</p>
+                <p>Lugar de gente que se baña con agua  y jabon</p>
             </div>
             <h1>Muy buenas tardes</h1>
             <p>El dia de hoy estudiaremos git</p>
